--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 # MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/carros?useSSL=false&allowPublicKeyRetrieval=true
-spring.datasource.username=root
-spring.datasource.password=root
+#spring.datasource.url=jdbc:mysql://localhost:3306/carros?useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.url=mysql://bc3e62c6f99413:89a32b60@us-cdbr-east-03.cleardb.com/heroku_c9c0142d3321dbb?reconnect=true
+#spring.datasource.username=root
+#spring.datasource.password=root
 spring.datasource.initialization-mode=always
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
